--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "parcel-bundler": "^1.11.0"
   },
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "^16.8.0-alpha.1",
+    "react-dom": "^16.8.0-alpha.1"
   }
 }
