--- a/final-project/package.json
+++ b/final-project/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "immutability-helper": "^3.0.0",
     "localforage": "^1.7.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
